--- a/14_sentiment_analysis.ipynb
+++ b/14_sentiment_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "18Dj5uGdpXdIsMMhwlgYi0Okdpph8GfcP",
-      "authorship_tag": "ABX9TyP0mJJB9NN9Gw2dulON6i7k",
+      "authorship_tag": "ABX9TyOnWJxDPyB+TbuJEIqLmWg9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "EFoWq4goN7RK",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 695
+          "height": 310
         },
-        "outputId": "c03d237f-72c8-4f7d-c8f8-fcf5c5ff6fb4"
+        "outputId": "fd41cb4e-f6e0-439a-8e5a-44488f92f805"
       },
       "outputs": [
         {
@@ -66,7 +66,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6aaceda7-748e-454b-a8ab-a7576431a258\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-eebc579e-c654-4e70-aa93-0bd5e23b0ad9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -169,7 +169,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6aaceda7-748e-454b-a8ab-a7576431a258')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-eebc579e-c654-4e70-aa93-0bd5e23b0ad9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -221,12 +221,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6aaceda7-748e-454b-a8ab-a7576431a258 button.colab-df-convert');\n",
+              "        document.querySelector('#df-eebc579e-c654-4e70-aa93-0bd5e23b0ad9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6aaceda7-748e-454b-a8ab-a7576431a258');\n",
+              "        const element = document.querySelector('#df-eebc579e-c654-4e70-aa93-0bd5e23b0ad9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -246,8 +246,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-028d9d3c-a31b-4e39-b23c-ca100f3e19ba\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-028d9d3c-a31b-4e39-b23c-ca100f3e19ba')\"\n",
+              "<div id=\"df-13d9669c-31f8-4950-bec1-12f983467922\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-13d9669c-31f8-4950-bec1-12f983467922')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -366,7 +366,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-028d9d3c-a31b-4e39-b23c-ca100f3e19ba button');\n",
+              "        document.querySelector('#df-13d9669c-31f8-4950-bec1-12f983467922 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -405,9 +405,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FY3Wfb7uR0Vm",
-        "outputId": "0568453e-6b3f-4f46-b169-51cd1897db00"
+        "outputId": "79364ca7-f14c-4511-edb7-073b475ff0b4"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,9 +445,9 @@
           "height": 241
         },
         "id": "J4518X95R2wg",
-        "outputId": "12baa803-971a-4de7-ae72-5363e5601799"
+        "outputId": "e9d28661-9d80-45de-ea1e-1d652bf0909a"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,9 +524,9 @@
           "height": 241
         },
         "id": "yjBHYKy7R5Ju",
-        "outputId": "b558aded-e2c4-47be-cd49-361444be3173"
+        "outputId": "f82d802f-c228-42fd-87f7-7965d9ded20c"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,9 +603,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UdSu4bnrVAJv",
-        "outputId": "35f02ab0-1e30-454e-c821-1d051aa389a1"
+        "outputId": "1e454e15-c43e-4c56-9fc1-00dc25ec7716"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +663,7 @@
         "# The histogram reveals this dataset is highly unbalanced towards high rating.\n",
         "reviews.Score.hist(bins=5,grid=False)\n",
         "plt.show()\n",
-        "print(reviews.groupby('Score').count().ld)"
+        "print(reviews.groupby('Score').count().id)"
       ],
       "metadata": {
         "id": "mD3v2qFLWgQ_"
@@ -688,9 +688,71 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "negative_reviews = reviews_sample[reviews_sample['Score'].isin([1,2]) ]\n",
+        "positive_reviews = reviews_sample[reviews_sample['Score'].isin([4,5]) ]\n",
+        "\n",
+        "negative_reviews_str = negative_reviews.Summary.str.cat()\n",
+        "positive_reviews_str = positive_reviews.Summary.str.cat()"
+      ],
       "metadata": {
         "id": "ASKsC3cnXSQJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word_cloudnegative = WordCloud(background_color='white').generate(negative_reviews_str)\n",
+        "word_cloudpositive = WordCloud(background_color='white').generate(positive_reviews_str)\n",
+        "\n",
+        "fig=plt.figure(figsize=(10,10))\n",
+        "ax1 = fig.add_subplot(211)\n",
+        "ax1.imshow(word_cloudnegative,interpolation='bilinear')\n",
+        "ax1.axis('off')\n",
+        "ax1.set_title('Reviews with Negative Scores',fontsize=20)\n",
+        "ax2 = fig.add_subplot(212)\n",
+        "ax2.imshow(word_cloudpositive,interpolation='bilinear')\n",
+        "ax2.axis('off')\n",
+        "ax2.set_title('Reviews with Positive Scores',fontsize=20)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "YKd90pZvBkg3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install vaderSentiment"
+      ],
+      "metadata": {
+        "id": "HBgpcQ0REAFf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+        "plt.style.use (fivethirtyeight)\n",
+        "# Function for getting the sentiment\n",
+        "cp = sns.color_palette()\n",
+        "analyzer = SentimentIntensityAnalyzer()\n",
+        "\n",
+        "# Generating sentiment for all the sentence present in the dataset\n",
+        "emptyline=[]\n",
+        "for row in df ['Text']:\n",
+        "  vs=analyzer.polarity_scores(row)\n",
+        "  emptyline.append(vs)"
+      ],
+      "metadata": {
+        "id": "jtH-lFw5JdhR"
       },
       "execution_count": null,
       "outputs": []
