--- a/10_3_25.ipynb
+++ b/10_3_25.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNpevxgVJUZu2cZXGZHnwO5",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Co7gaD1gch2K"
       },
@@ -39,26 +23,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Ae94fnwFSOVN"
+      },
+      "outputs": [],
       "source": [
         "import google.generativeai as genai\n",
         "from google.colab import userdata\n",
         "\n",
         "GOOGLE_API_KEY = userdata.get('GOOGLE_API_KEY')\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
-      ],
-      "metadata": {
-        "id": "Ae94fnwFSOVN"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model = genai.GenerativeModel('models/gemini-2.0-flash')\n",
-        "response = model.generate_content(\"Please give me python code to sort a list.\")\n",
-        "print(response.text)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -67,11 +47,10 @@
         "id": "oe54FvtETeuL",
         "outputId": "5c8327c4-a1ea-46dd-ffee-b65892d16a29"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "```python\n",
             "# Method 1: Using the sorted() function (creates a new sorted list)\n",
@@ -187,30 +166,45 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "model = genai.GenerativeModel('models/gemini-2.0-flash')\n",
+        "response = model.generate_content(\"Please give me python code to sort a list.\")\n",
+        "print(response.text)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "background_save": true
+        },
+        "id": "Mb0lZNAbVV45"
+      },
+      "outputs": [],
       "source": [
         "from google import genai\n",
         "from google.genai import types\n",
         "\n",
-        "client = genai.Client(api_key=GOOGLE_API_KEY)"
-      ],
-      "metadata": {
-        "id": "Mb0lZNAbVV45"
-      },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "595FSHVDZdRM"
-      },
-      "execution_count": null,
-      "outputs": []
+        "client = genai.Clie"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyNZM1Nye13bleJofh54N8xh",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
